# ferris_swarm

./: .gitignore  Cargo.toml  Cargo.toml.backup  Dockerfile  MDNS_IMPLEMENTATION.md  config.toml  constellation.toml  demo_zero_config.sh  deploy_nodes.sh  entrypoint.sh  nodes.toml  test_auto_registration.sh  test_constellation.sh  test_discovery.sh  test_mdns.sh
crates/client/: Cargo.toml
crates/client/src/: comms.rs  config.rs  lib.rs  tasks.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  job_config.rs  lib.rs  settings.rs
crates/constellation/: Cargo.toml
crates/constellation/src/: auto_register.rs  config.rs  handlers.rs  lib.rs  models.rs  routes.rs  state.rs  websocket.rs
crates/core/: Cargo.toml
crates/core/src/: chunk.rs  error.rs  lib.rs  models.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: discovery.rs  lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: auto_register.rs  cli.rs  config.rs  lib.rs  mod.rs  service.rs
crates/orchestration/: Cargo.toml
crates/orchestration/src/: lib.rs  orchestration.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/logs/: application.log.2025-08-01
crates/tests/src/: common.rs  lib.rs
crates/tests/src/integration/: distributed_encoding.rs  end_to_end.rs  mod.rs  service_communication.rs
crates/tests/src/performance/: mod.rs
crates/tests/src/unit/: client.rs  config.rs  constellation.rs  core.rs  discovery.rs  mod.rs  node.rs  orchestration.rs  video.rs
crates/video/: Cargo.toml
crates/video/src/: concatenator.rs  encoder.rs  lib.rs  segmenter.rs  utils.rs
logs/: application.log.2025-07-31  application.log.2025-08-01
src/: chunk.rs  config.rs  discovery.rs  error.rs  job_config.rs  lib.rs  logging.rs  orchestration.rs  protos.rs  settings.rs
src/client/: cli.rs  comms.rs  config.rs  mod.rs  tasks.rs
src/constellation/: auto_register.rs  config.rs  handlers.rs  mod.rs  models.rs  routes.rs  state.rs  websocket.rs
src/ffmpeg/: concat.rs  concatenator.rs  encoder.rs  mod.rs  segment.rs  segmenter.rs  utils.rs
src/node/: auto_register.rs  cli.rs  config.rs  mod.rs  service.rs
static/: dashboard.html
