[package]
name = "ferris_swarm"
version = "0.1.0"
edition = "2021"
authors =  ["Maksym Stepanov master_of_zen@protonmail.com"]
description = "Distributed Video Encoder"
repository = "https://github.com/master-of-zen/ferris_swarm"
keywords = ["av1", "encoder", "video", "multimedia", "rust"]
categories = ["multimedia::encoding", "command-line-utilities"]
license = "GPL-3.0"
readme = "README.md"

[[bin]]
name = "ferris_swarm_node"
path = "src/bin/node.rs"

[[bin]]
name = "ferris_swarm_client"
path = "src/bin/client.rs"

[dependencies]
tonic = { version = "0.9", features = ["gzip"]}
prost = "0.11"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.5"
which = "4.4"
config = "0.13"
sha2 = "0.10"
hex = "0.4.3"
futures = "0.3.30"
tracing-appender = "0.2"

[build-dependencies]
tonic-build = "0.9"
