[package]
name = "ferris-swarm-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Configuration management for Ferris Swarm"
license.workspace = true

[dependencies]
ferris-swarm-core = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }