[package]
name = "ferris-swarm-constellation"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Orchestration hub for Ferris Swarm distributed video encoder"
license.workspace = true

[[bin]]
name = "ferris_swarm_constellation"
path = "src/bin/main.rs"

[dependencies]
ferris-swarm-core = { workspace = true }
ferris-swarm-proto = { workspace = true }
ferris-swarm-logging = { workspace = true }
ferris-swarm-config = { workspace = true }
ferris-swarm-discovery = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
hostname = { workspace = true }