[package]
name = "ferris-swarm-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Logging utilities for Ferris Swarm"
license.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }