[package]
name = "ferris-swarm-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "gRPC protocol definitions for Ferris Swarm"
license.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }