[package]
name = "ferris-swarm-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Comprehensive test suite for Ferris Swarm"
license.workspace = true

[dependencies]
# Test all workspace crates
ferris-swarm-core = { workspace = true }
ferris-swarm-proto = { workspace = true }
ferris-swarm-logging = { workspace = true }
ferris-swarm-video = { workspace = true }
ferris-swarm-config = { workspace = true }
ferris-swarm-discovery = { workspace = true }
ferris-swarm-orchestration = { workspace = true }
ferris-swarm-client = { workspace = true }
ferris-swarm-node = { workspace = true }
ferris-swarm-constellation = { workspace = true }

# Test dependencies
tokio = { workspace = true, features = ["test-util"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

# Additional test-specific dependencies
criterion = "0.5"
mockall = "0.12"
wiremock = "0.5"
proptest = "1.4"